--- a/templates/channels/channellog_list_spa.haml
+++ b/templates/channels/channellog_list_spa.haml
@@ -1,61 +1,55 @@
 -extends "smartmin/list.html"
 -load i18n contacts smartmin humanize temba
 
+-block spa-title
+  -if request.GET.others
+    -trans "Non-Message Logs"
+  -else
+    {{folder|title}}
+
+-block extra-style
+  {{block.super}}
+  :css
+    .log-error {
+      color: rgb(var(--error-rgb));
+    }
 -block page-title
-  -trans "Channel Events"
+  -trans "Channel Logs"
 
 -block title
   %a{ href:"{% url 'channels.channel_read' channel.uuid %}" }
     {{ channel }}
 
 -block subtitle
-  {{channel.get_channel_type_display}}
-
-  -if request.GET.others
-    -trans "Interactions"
-  -else
-    -trans "Recent Events"
+  -trans "Logs are kept for the last 30 days."
 
 -block content
 
   .mt-4.shadow.rounded-lg.rounded-bl-none.rounded-br-none.bg-white
     -include "includes/short_pagination.haml"
           
-  .flex-grow.overflow-y-auto.shadow
-    %table.relative.list.object-list.lined.scrolled.sticky
-      %thead
-        %tr
-          %th{ style:'width:120px' }
-            -trans "Contact"
-          %th
-          %th{ style:'width:200px'}
-            -trans "Elapsed"
-
-          %th{ style:'width:160px;text-align:right;'}
-            -trans "Time"
-
-      %tbody
+  .flex-grow.overflow-y-auto.shadow.bg-white.shadow
         -for obj in object_list
-          %tr{ class:"{% if obj.is_error %}warning{% endif %}" }
-            %td
+          .flex.mx-4.my-2(class="{% if obj.is_error %}log-error{% endif %}")
+            .contact.mr-4(style="width:8em")
               -if obj.msg and obj.msg.contact
-                .hover-linked(onclick="goto(event)" href='{% url "contacts.contact_read" obj.msg.contact.uuid %}')
+                .hover-linked.truncate(onclick="goto(event)" href='{% url "contacts.contact_read" obj.msg.contact.uuid %}')
                   {{obj.msg.contact_urn.get_display}}
               -else
                 -trans "Channel interaction"
-            %td
+            .description
               -if obj.msg
-                .hover-linked(onclick="goto(event)" href='{% url "channels.channellog_msg" obj.channel.uuid obj.msg.id %}')
+                .hover-linked.truncate.w-64(onclick="goto(event)" href='{% url "channels.channellog_msg" obj.channel.uuid obj.msg.id %}')
                   {{obj.get_description}}
               -elif obj.connection
-                .hover-linked(onclick="goto(event)" href='{% url "channels.channellog_call" obj.connection.channel.uuid obj.connection.id %}')
+                .hover-linked.truncate.w-64(onclick="goto(event)" href='{% url "channels.channellog_call" obj.connection.channel.uuid obj.connection.id %}')
                   {{obj.get_description}}
               -else
-                .hover-linked(onclick="goto(event)" href='{% url "channels.channellog_read" obj.id %}')
+                .hover-linked.truncate.w-64(onclick="goto(event)" href='{% url "channels.channellog_read" obj.id %}')
                   {{obj.get_description}}
-            %td
+            .elapsed.mx-2.text-right.mr-4.flex-grow
               %span
                 {{ obj.elapsed_ms|default:"0"|intcomma }}ms
 
-            %td(style='text-align: right' nowrap='true')
+            .created_on.whitespace-nowrap(style='text-align: right' nowrap='true')
               {% format_datetime obj.created_on seconds=True %}
