--- a/templates/spa_frame.haml
+++ b/templates/spa_frame.haml
@@ -821,7 +821,7 @@
     }
 
 -block temba-store
-  -if org
+  -if user_org
     %temba-store(
       completion="/mr/docs/{{ LANGUAGE_CODE }}/editor.json"
       languages="/org/languages/"
