adding ticket download modax button to content menu - in progress
- adding ticket export permissions to settings_common
- adding export ticket def sigs to tickets -> models
- adding build content menu def to tickets -> views -> TicketCRUDL List class

--- a/templates/tickets/ticket_list.haml
+++ b/templates/tickets/ticket_list.haml
@@ -270,6 +270,20 @@
       // menu.refresh();
     }
 
+    {% comment %} 
+    // TODO do i need this? this seems to be needed for flow run exports, but not for message exports
+    function exportTickets(){
+      var endpoint = '{% url "tickets.ticket_export" %}';
+      // TODO update from #export-results to #ticket-export or something similar
+      var modal = document.querySelector("#export-results");
+        var ids = getCheckedIds();
+        if (ids.length > 0) {
+          modal.setAttribute("endpoint", endpoint + '?ids=' + ids);
+        }
+      modal.open = true;
+    } 
+    {% endcomment %}
+
 -block page-container
   -block content
     .flex.flex-col(style="height:100%")
