--- a/templates/msgs/broadcast_scheduled_update.haml
+++ b/templates/msgs/broadcast_scheduled_update.haml
@@ -1,5 +1,5 @@
 -extends 'smartmin/form.html'
--load smartmin i18n humanize
+-load smartmin i18n
 
 -block fields
   .title
@@ -13,6 +13,3 @@
 
   .mt-2
     {{ object.get_text }}
-
-
-
