Switch to temba-datepicker

--- a/templates/contacts/contact_read_spa.haml
+++ b/templates/contacts/contact_read_spa.haml
@@ -100,8 +100,8 @@
 
     %temba-tab(icon="grid" name='{{_("Fields")|escapejs}}')
       .flex.flex-grow.flex-col.p-4.overflow-y-auto(style="border-top-right-radius: var(--curvature);")
-        %temba-contact-fields.pinned-fields.pb-4(contact="{{object.uuid}}" pinned="true" -temba-button-clicked="handleFieldSearch")
-        %temba-contact-fields.all-fields(contact="{{object.uuid}}" -temba-button-clicked="handleFieldSearch")
+        %temba-contact-fields.pinned-fields.pb-4(timezone="{{object.org.timezone}}" contact="{{object.uuid}}" pinned="true" -temba-button-clicked="handleFieldSearch")
+        %temba-contact-fields.all-fields(timezone="{{object.org.timezone}}" contact="{{object.uuid}}" -temba-button-clicked="handleFieldSearch")
           .no-fields.p-16.text-center(slot="empty")
             .text-xl.mb-4
               -trans "No Fields"
