Different show url for spa and non-spa tickets

--- a/templates/tickets/ticket_list.haml
+++ b/templates/tickets/ticket_list.haml
@@ -182,7 +182,12 @@
       updateTicketList();
       
       var path = `${folder}/${status}/${ticketUUID || ''}`;
-      var show = `/tickets/${path}`;
+
+      {% if is_spa %}
+        var show = `/tickets/${path}`;
+      {% else %}
+        var show = `/ticket/${path}`;
+      {% endif %}
 
       if (!show.endsWith("/")) {
         show += "/";
