Don't show menu until it is defined

--- a/static/css/temba-components.css
+++ b/static/css/temba-components.css
@@ -221,3 +221,11 @@ temba-dropdown {
 temba-dropdown:defined {
   opacity: 1;
 }
+
+temba-menu {
+  display: none;
+}
+
+temba-menu:defined{
+  display: block;
+}
