Update both main menu and content menus to align with new conventions

--- a/templates/flows/flow_list_spa.haml
+++ b/templates/flows/flow_list_spa.haml
@@ -112,7 +112,7 @@
         refresh(function() { recheckIds(); }, true);
         var menu = document.querySelector("temba-menu");
         if (menu) {
-          window.setTimeout(function(){ menu.refresh()}, 2000);
+          menu.refresh();
         }
       }
 
