--- a/templates/spa_frame.haml
+++ b/templates/spa_frame.haml
@@ -696,7 +696,7 @@
       });
     }
 
-    var toMap = /(msg|contact|flow|ticket|channels|triggers|campaign|org|user|settings|httplog).*/;
+    var toMap = /(msg|contact|flow|ticket|channels|triggers|campaign|org|user|settings|httplog|classifier).*/;
 
     function handleNoPath(event) {
       var details = event.detail;
