--- a/templates/spa_page_menu.haml
+++ b/templates/spa_page_menu.haml
@@ -71,6 +71,10 @@
     --icon-color: #888;
   }
 
+  temba-dropdown:empty {
+    display: none;
+  }
+
 
 
 
@@ -79,6 +83,7 @@
   function handleMenuClicked(evt) {
     var link = evt.target;
     var href = link.getAttribute("data-href");
+    var startDisabled = link.getAttribute("data-disabled") == "True";
     var modax = link.getAttribute("data-modax");
     var onSubmit = link.getAttribute("data-on-submit");
 
@@ -87,6 +92,9 @@
     }
 
     if (modax) {
+      var shared = document.querySelector("#shared-modax");
+      shared.disabled = startDisabled;
+
       showModax(modax, href, onSubmit);
     } else {
       if (href) {
@@ -109,20 +117,21 @@
     }
   }
 
--if gear_links
+-if content_menu_buttons or content_menu_links
   .flex.h-full.spa-gear-buttons
-    -with link=gear_links|first
-      %temba-button.ml-4(name="{{link.title|escapejs}}" onclick="handleMenuClicked(event)" class='{{ link|gear_link_classes }}' data-success-url='{{ link.success_url }}' data-href='{{link.href}}' data-modax='{{link.modax|escapejs}}' data-on-submit='{{link.on_submit|escapejs}}')
+    -for link in content_menu_buttons
+      %temba-button.ml-4(name="{{link.title|escapejs}}" onclick="handleMenuClicked(event)" class='{{ link|gear_link_classes }}' data-success-url='{{ link.success_url }}' data-href='{{link.href}}' data-modax='{{link.modax|escapejs}}' data-on-submit='{{link.on_submit|escapejs}}' data-disabled='{{link.disabled}}')
 
-    -if gear_links|length > 1
+    -if content_menu_links
       %temba-dropdown.items-stretch.flex.flex-column(arrowoffset="-12" offsetx="24" offsety="6" arrowsize="8")
         .menu-button.items-center.flex.flex-column.py-2.px-2.ml-2(slot="toggle")
           %temba-icon( name="menu" size="1.5")
         .dropdown.px-6.py-4.text-gray-800.z-50(slot="dropdown" style="min-width:200px")
-          -for link in gear_links
-            -if not forloop.first
-              .whitespace-nowrap.menu-item.hover-linked.font-normal{onclick:'handleMenuClicked(event)', class:'{{ link|gear_link_classes }}', data-success-url:'{{ link.success_url }}', data-href:'{{link.href}}', data-modax: '{{link.modax|escapejs}}', data-on-submit:'{{link.on_submit|escapejs}}'}
-                {{link.title}}
-                %span{class:'gear-flag'}
-                  {{link.flag}}
+          -for link in content_menu_links
+            -if link.divider
+              .border-b.border-gray-200.my-4.-mx-6
+            .whitespace-nowrap.menu-item.hover-linked.font-normal{onclick:'handleMenuClicked(event)', class:'{{ link|gear_link_classes }}', data-success-url:'{{ link.success_url }}', data-href:'{{link.href}}', data-modax: '{{link.modax|escapejs}}', data-on-submit:'{{link.on_submit|escapejs}}', data-disabled:'{{link.disabled}}'}
+              {{link.title}}
+              %span{class:'gear-flag'}
+                {{link.flag}}
 
