--- a/templates/channels/channel_claim.haml
+++ b/templates/channels/channel_claim.haml
@@ -2,14 +2,12 @@
 -load i18n compress temba
 
 -block title
-  -trans "Add a Channel"
+  -trans "New Channel"
 
 -block content
   -blocktrans trimmed with name=brand.name
-    To get started you need to add a channel to your workspace. A channel is a phone number or social network
-    account which {{ name }} can use to send and receive messages on your behalf. You can choose to use an
-    Android phone and your own cell phone plan, or we can connect you with a service provider in your country
-    directly.
+    To send and receive messages you need to add a channel to your workspace. A channel is a phone number or social network
+    account which {{ name }} can use to send and receive messages on your behalf.
 
   -if total_count >= total_limit
     .mb-4
