--- a/templates/spa.haml
+++ b/templates/spa.haml
@@ -27,7 +27,7 @@
 
 
 -block page-header
-  -if title or gear_links
+  -if title or content_menu_buttons or content_menu_links
     .spa-title.no-menu.flex.items-center.mb-4
       .text-container.text-2xl.text-gray-700
         .flex.flex-row
@@ -37,7 +37,7 @@
       .line.flex-grow.mr-2.ml-6
         .h-0.border.border-gray-200
       
-      -if gear_links
+      -if content_menu_buttons or content_menu_links
         -include "spa_page_menu.haml"
 
   -block subtitle
