--- a/templates/channels/channellog_list.haml
+++ b/templates/channels/channellog_list.haml
@@ -47,15 +47,15 @@
                     -if obj.msg
                       .hover-linked(onclick="goto(event)" href='{% url "channels.channellog_msg" obj.channel.uuid obj.msg.id %}')
                         {{obj.get_log_type_display}}
-                    -elif obj.connection
-                      .hover-linked(onclick="goto(event)" href='{% url "channels.channellog_call" obj.connection.id %}')
+                    -elif obj.call
+                      .hover-linked(onclick="goto(event)" href='{% url "channels.channellog_call" obj.channel.uuid obj.call.id %}')
                         {{obj.get_log_type_display}}
                     -else
                       .hover-linked(onclick="goto(event)" href='{% url "channels.channellog_read" obj.id %}')
                         {{obj.get_log_type_display}}
                   %td
                     %span
-                      {{ obj.elapsed_ms|default:"0"|intcomma }}ms
+                      {{ obj.elapsed_ms|intcomma }}ms
 
                   %td(style='text-align: right' nowrap='true')
                     {% format_datetime obj.created_on seconds=True %}
