--- a/templates/flows/flow_export_results.haml
+++ b/templates/flows/flow_export_results.haml
@@ -1,8 +1,22 @@
 -extends 'includes/modax.html'
--load i18n
+-load i18n smartmin
 
 -block pre-form
   .mb-4
     -blocktrans trimmed
       Flow exports will include the results for each contact that has passed through the flow. You may optionally
       include up to 10 contact fields and URN types whose values will also be exported with each run.
+
+-block fields
+  .flex
+    .start.flex-grow
+      -render_field 'start_date'
+    .px-1
+    .end.flex-grow
+      -render_field 'end_date'
+  
+  -render_field 'group_memberships'
+  -render_field 'contact_fields'
+  -if form.fields.extra_urns
+    -render_field 'extra_urns'
+  -render_field 'responded_only'
