some permission and list view and entity view updates
- added msg.broadcast_scheduled_delete permissions
- adde bulk actions to broadcast list view (commented out for now)
- added content menu to scheduled message entity view (but not successfully displaying yet)
- added delete button to scheduled message entity view message details formax
- added todos for adding delete confirm alert to all of the above

--- a/templates/msgs/broadcast_scheduled_update.haml
+++ b/templates/msgs/broadcast_scheduled_update.haml
@@ -10,6 +10,22 @@
 
 -block summary
   -include "includes/recipients.haml" with groups=broadcast.groups.all contacts=broadcast.contacts.all urns=broadcast.raw_urns
+  .flex
+    .schedule-summary.self-center
+      .mt-2
+        {{ object.get_text }}    
 
-  .mt-2
-    {{ object.get_text }}
+    .delete-broadcast.ml-8
+      .button-light(onclick="deleteScheduledMessage(event)" href="{% url 'msgs.broadcast_scheduled_delete' object.id %}")
+        -trans "Delete"
+    {% comment %} todo need to add delete confirm temba-dialog or modax {% endcomment %}
+
+-block extra-script
+  {{ block.super }}
+
+  :javascript
+    function deleteScheduledMessage(event) {
+      event.stopPropagation();
+      event.preventDefault();
+      handlePosterize(event.currentTarget);
+    }
